# qualification_work

./: .env  Dockerfile  chroma_smoke.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: afc609574c9a_baseline.py  fbc2d9e4196a_add_links_1.py
data/links/1/: link_3.html  link_3.txt
data/sqlite/: app.db
scripts/: clear_database.py  delete_file.py  reindex_files.py
src/tg_assistant/: config.py  main.py
src/tg_assistant/bot/middlewares/: __init__.py  current_user.py  db_session.py  services.py
src/tg_assistant/bot/routers/: __init__.py  chat.py  files.py  links.py  start.py  tasks.py
src/tg_assistant/db/: engine.py
src/tg_assistant/db/models/: __init__.py  files.py  link.py  task.py  user.py
src/tg_assistant/services/: chroma_service.py  document_parser.py  link_fetcher.py  links.py  ollama_service.py  reminders.py  rerank_service.py  speech_to_text.py  users.py
